--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ code/show_codegen_code/.idea
 code/udf_example1/target
 code/udf_example1/project
 code/udf_example1/.idea
+
+code/udf_example2/target
+code/udf_example2/project
+code/udf_example2/.idea
