--- a/.gitignore
+++ b/.gitignore
@@ -14,9 +14,9 @@ code/udf_example2/target
 code/udf_example2/project
 code/udf_example2/.idea
 
-code/codengen_without_null/target
-code/codengen_without_null/project
-code/codengen_without_null/.idea
+code/codegen_example/target
+code/codegen_example/project
+code/codegen_example/.idea
 
 code/codengen_with_null/target
 code/codengen_with_null/project
