codegen with null

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,6 @@ code/codegen_example/target
 code/codegen_example/project
 code/codegen_example/.idea
 
-code/codengen_with_null/target
-code/codengen_with_null/project
-code/codengen_with_null/.idea
+code/codegen_with_null/target
+code/codegen_with_null/project
+code/codegen_with_null/.idea
